<resources>
    <string name="app_name">Term Tracker</string>
    <string name="default_web_client" translatable="false">132611154985-sbq6dka9sj6oa1ta8dkpa2tkqnlrmivr.apps.googleusercontent.com</string>
    <string name="status">Status:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="instructor">Instructor</string>
    <string name="assessments">Assessments</string>
    <string name="note">Note:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="term_tracker">Term Tracker</string>
    <string name="my_terms">My Terms</string>
    <string name="title">Title:</string>
    <string name="new_term">New Term</string>
    <string name="course_list">Course List</string>
    <string name="assessment_details">Assessment Details</string>
    <string name="course_details">Course Details</string>
    <string name="start_and_end_dates">%1s - %2s</string>
    <string name="in_parentheses">(%1s)</string>
    <string name="assessment_list_title">%1s (%2s)</string>
    <string name="new_assessment">New assessment</string>
    <string name="description">Description:</string>
    <string name="type">Type:</string>
    <string name="objective_assessment">Objective Assessment</string>
    <string name="performance_assessment">Performance Assessment</string>
    <string name="course_note">Course note</string>
    <string name="notify">Notify</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add_new_term">Add new term</string>
    <string name="add_new_course">Add new course</string>
    <string name="add_new_assessment">Add new assessment</string>
    <string name="term_deleted">%1s has been deleted.</string>
    <string name="course_deleted">%1s and associated assessments have been deleted.</string>
    <string name="assessment_deleted">%1s has been deleted.</string>
    <string name="cannot_delete_term">%1s cannot be deleted because it has associated courses.</string>
    <string name="new_course">New Course</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string name="track">Track</string>
    <string name="credits">Credits:</string>
    <string name="completedCredits">Completed Credits: %1d\/%2d</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_search">search</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="terms">Terms</string>
    <string name="courses">Courses</string>
    <string name="notes">Notes</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="reports">Reports</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_user">Delete Account</string>
    <string name="term_details">Term Details</string>
</resources>