<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddAssessment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_assessment"
            android:importantForAccessibility="yes"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/titleLabel"
            app:layout_constraintStart_toStartOf="@+id/editStartDate"
            app:layout_constraintTop_toTopOf="@+id/titleLabel"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/startDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingVertical="5dp"
            android:text="@string/start_date"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/titleLabel"
            app:layout_constraintTop_toBottomOf="@+id/titleLabel" />

        <EditText
            android:id="@+id/editStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="yes"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:minEms="6"
            android:paddingHorizontal="5dp"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="@+id/startDateLabel"
            app:layout_constraintStart_toEndOf="@+id/startDateLabel"
            app:layout_constraintTop_toTopOf="@+id/startDateLabel" />

        <TextView
            android:id="@+id/endDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/end_date"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/startDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

        <EditText
            android:id="@+id/editEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:importantForAccessibility="yes"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:minEms="6"
            android:paddingVertical="5dp"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="@+id/endDateLabel"
            app:layout_constraintStart_toStartOf="@+id/editStartDate"
            app:layout_constraintTop_toTopOf="@+id/endDateLabel" />

        <TextView
            android:id="@+id/typeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingVertical="5dp"
            android:text="@string/type"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/endDateLabel"
            app:layout_constraintTop_toBottomOf="@id/endDateLabel" />

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/editStartDate"
            app:layout_constraintTop_toTopOf="@+id/typeLabel" >

            <RadioButton
                android:id="@+id/objectiveRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/objective_assessment" />

            <RadioButton
                android:id="@+id/performanceRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/performance_assessment" />
        </RadioGroup>

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/titleLabel"
            app:layout_constraintTop_toBottomOf="@id/typeRadioGroup" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:gravity="start|top"
            android:importantForAccessibility="yes"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/descriptionLabel"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
