<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".UI.CourseDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/editCourseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Course Title" />

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/status"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/editCourseTitle"
            app:layout_constraintTop_toBottomOf="@+id/editCourseTitle" />

        <TextView
            android:id="@+id/statusSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/statusLabel"
            app:layout_constraintStart_toStartOf="@+id/textStartDate"
            app:layout_constraintTop_toTopOf="@+id/statusLabel"
            tools:text="Status" />

        <TextView
            android:id="@+id/creditsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/statusLabel"
            app:layout_constraintTop_toBottomOf="@+id/statusLabel" />

        <TextView
            android:id="@+id/textCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/creditsLabel"
            app:layout_constraintStart_toStartOf="@+id/textStartDate"
            app:layout_constraintTop_toTopOf="@+id/creditsLabel"
            tools:text="5" />

        <TextView
            android:id="@+id/startDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/statusLabel"
            app:layout_constraintTop_toBottomOf="@+id/creditsLabel" />

        <TextView
            android:id="@+id/textStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/startDateLabel"
            app:layout_constraintStart_toEndOf="@+id/startDateLabel"
            app:layout_constraintTop_toTopOf="@+id/startDateLabel"
            tools:text="12/02/1621" />

        <TextView
            android:id="@+id/endDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/startDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

        <TextView
            android:id="@+id/textEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/endDateLabel"
            app:layout_constraintStart_toStartOf="@+id/textStartDate"
            app:layout_constraintTop_toTopOf="@+id/endDateLabel"
            tools:text="12/02/1621" />

        <TextView
            android:id="@+id/termTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="(Term Title)"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/endDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/endDateLabel" />


        <TextView
            android:id="@+id/instructorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/instructor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/editCourseTitle"
            app:layout_constraintTop_toBottomOf="@+id/termTitle" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/instructorLabel"
            app:layout_constraintTop_toBottomOf="@+id/instructorLabel" />

        <TextView
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintStart_toEndOf="@+id/phone"
            app:layout_constraintTop_toTopOf="@+id/name"
            tools:text="Bob Vila" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/editName"
            app:layout_constraintTop_toTopOf="@+id/email"
            tools:text="bob@vila.com" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/editPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/phone"
            app:layout_constraintStart_toStartOf="@+id/editName"
            app:layout_constraintTop_toTopOf="@+id/phone"
            tools:text="123-456-7890" />

        <TextView
            android:id="@+id/noteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/note"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/editCourseTitle"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/textNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/noteLabel"
            app:layout_constraintTop_toBottomOf="@+id/noteLabel"
            tools:text="Note text goes here." />

        <TextView
            android:id="@+id/assessmentsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/assessments"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/editCourseTitle"
            app:layout_constraintTop_toBottomOf="@+id/textNote" />

        <FrameLayout
            android:id="@+id/assessmentListHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentsLabel">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/assessmentsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />
        </FrameLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:onClick="addAssessment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>