<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddTerm">


    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_term"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/titleLabel"
        app:layout_constraintStart_toStartOf="@+id/editStartDate"
        app:layout_constraintTop_toTopOf="@+id/titleLabel" />

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:text="@string/start_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/titleLabel"
        app:layout_constraintTop_toBottomOf="@+id/titleLabel" />

    <EditText
        android:id="@+id/editStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="date"
        android:minHeight="48dp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/startDateLabel"
        app:layout_constraintStart_toEndOf="@+id/startDateLabel"
        app:layout_constraintTop_toTopOf="@+id/startDateLabel" />

    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:text="@string/end_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/startDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

    <EditText
        android:id="@+id/editEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:inputType="date"
        android:minHeight="48dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/endDateLabel"
        app:layout_constraintStart_toStartOf="@+id/editStartDate"
        app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

    <ImageView
        android:id="@+id/cal_icon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="35dp"
        android:minHeight="35dp"
        android:onClick="showDatePicker"
        app:layout_constraintBottom_toBottomOf="@+id/editStartDate"
        app:layout_constraintStart_toEndOf="@+id/editStartDate"
        app:layout_constraintTop_toTopOf="@+id/editStartDate"
        app:srcCompat="@drawable/ic_date" />

    <ImageView
        android:id="@+id/cal_icon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="35dp"
        android:minHeight="35dp"
        android:onClick="showDatePicker"
        app:layout_constraintBottom_toBottomOf="@+id/editEndDate"
        app:layout_constraintStart_toEndOf="@+id/editEndDate"
        app:layout_constraintTop_toBottomOf="@+id/editStartDate"
        app:srcCompat="@drawable/ic_date" />

</androidx.constraintlayout.widget.ConstraintLayout>
